ISSD-4137 Update Routine Metrics using custom Api
