# workspaces/liferay-testray-workspace/modules/testray-rest-impl/rest-openapi.yaml
@@ -58,6 +58,19 @@ components:
                 testrayStatusMetric:
                     $ref: "#/components/schemas/TestrayStatusMetric"
             type: object
+        TestrayRoutineMetric:
+            properties:
+                createDate:
+                    format: date-time
+                    type: string
+                testrayRoutineId:
+                    format: int64
+                    type: integer
+                testrayRoutineName:
+                    type: string
+                testrayStatusMetric:
+                    $ref: "#/components/schemas/TestrayStatusMetric"
+            type: object
         TestrayRunComparison:
             properties:
                 results:
@@ -423,6 +436,56 @@ paths:
                                     $ref: "#/components/schemas/TestrayTeamMetric"
                                 type: array
             tags: ["TestrayStatusMetric"]
+    "/testray-status-metrics/by-testray-projectId/{testrayProjectId}/testray-routines-metrics":
+        get:
+            operationId: getTestrayStatusMetricByTestrayProjectIdTestrayProjectTestrayRoutinesMetricsPage
+            parameters:
+                - in: path
+                  name: testrayProjectId
+                  required: true
+                  schema:
+                      format: int64
+                      type: integer
+                - in: query
+                  name: page
+                  schema:
+                      type: string
+                - in: query
+                  name: pageSize
+                  schema:
+                      type: string
+                - in: query
+                  name: testrayCasePriorities
+                  schema:
+                      type: string
+                - in: query
+                  name: testrayCaseTypes
+                  schema:
+                      type: string
+                - in: query
+                  name: testrayRoutineId
+                  schema:
+                      format: int64
+                      type: integer
+                - in: query
+                  name: testrayTeamId
+                  schema:
+                      format: int64
+                      type: integer
+            responses:
+                200:
+                    content:
+                        application/json:
+                            schema:
+                                items:
+                                    $ref: "#/components/schemas/TestrayRoutineMetric"
+                                type: array
+                        application/xml:
+                            schema:
+                                items:
+                                    $ref: "#/components/schemas/TestrayRoutineMetric"
+                                type: array
+            tags: ["TestrayRoutineMetric"]
     "/testray-test-suite":
         post:
             operationId: postTestrayTestSuite
