# workspaces/liferay-testray-workspace/modules/testray-rest-impl/src/main/java/com/liferay/testray/rest/internal/graphql/servlet/v1_0/ServletDataImpl.java
@@ -5,10 +5,12 @@ import com.liferay.portal.vulcan.graphql.servlet.ServletData;
 import com.liferay.testray.rest.internal.graphql.mutation.v1_0.Mutation;
 import com.liferay.testray.rest.internal.graphql.query.v1_0.Query;
 import com.liferay.testray.rest.internal.resource.v1_0.TestrayBuildAutofillResourceImpl;
+import com.liferay.testray.rest.internal.resource.v1_0.TestrayRoutineMetricResourceImpl;
 import com.liferay.testray.rest.internal.resource.v1_0.TestrayRunComparisonResourceImpl;
 import com.liferay.testray.rest.internal.resource.v1_0.TestrayStatusMetricResourceImpl;
 import com.liferay.testray.rest.internal.resource.v1_0.TestrayTestSuiteResourceImpl;
 import com.liferay.testray.rest.resource.v1_0.TestrayBuildAutofillResource;
+import com.liferay.testray.rest.resource.v1_0.TestrayRoutineMetricResource;
 import com.liferay.testray.rest.resource.v1_0.TestrayRunComparisonResource;
 import com.liferay.testray.rest.resource.v1_0.TestrayStatusMetricResource;
 import com.liferay.testray.rest.resource.v1_0.TestrayTestSuiteResource;
@@ -40,6 +42,8 @@ public class ServletDataImpl implements ServletData {
 		Mutation.setTestrayTestSuiteResourceComponentServiceObjects(
 			_testrayTestSuiteResourceComponentServiceObjects);
 
+		Query.setTestrayRoutineMetricResourceComponentServiceObjects(
+			_testrayRoutineMetricResourceComponentServiceObjects);
 		Query.setTestrayRunComparisonResourceComponentServiceObjects(
 			_testrayRunComparisonResourceComponentServiceObjects);
 		Query.setTestrayStatusMetricResourceComponentServiceObjects(
@@ -102,6 +106,11 @@ public class ServletDataImpl implements ServletData {
 							"postTestrayTestSuiteBatch"));
 
 					put(
+						"query#testrayStatusMetricByTestrayProjectIdTestrayProjectTestrayRoutinesMetrics",
+						new ObjectValuePair<>(
+							TestrayRoutineMetricResourceImpl.class,
+							"getTestrayStatusMetricByTestrayProjectIdTestrayProjectTestrayRoutinesMetricsPage"));
+					put(
 						"query#testrayRunComparison",
 						new ObjectValuePair<>(
 							TestrayRunComparisonResourceImpl.class,
@@ -141,6 +150,10 @@ public class ServletDataImpl implements ServletData {
 	@Reference(scope = ReferenceScope.PROTOTYPE_REQUIRED)
 	private ComponentServiceObjects<TestrayTestSuiteResource>
 		_testrayTestSuiteResourceComponentServiceObjects;
+
+	@Reference(scope = ReferenceScope.PROTOTYPE_REQUIRED)
+	private ComponentServiceObjects<TestrayRoutineMetricResource>
+		_testrayRoutineMetricResourceComponentServiceObjects;
 
 	@Reference(scope = ReferenceScope.PROTOTYPE_REQUIRED)
 	private ComponentServiceObjects<TestrayRunComparisonResource>
